syntax = "proto3";
package airbloc.warehouse;
option go_package = "github.com/airbloc/airbloc-go/warehouse";


service Warehouse {
    rpc Store(stream RawData) returns (StoreResult);
    rpc StoreEncrypted(stream EncryptedData) returns (StoreResult);
    rpc RegisterUri(stream EncryptedData) returns (StoreResult);
}

message RawData {
    string collection = 1;
    string ownerId = 2;
    string payload = 3;
}

message EncryptedData {
    string collection = 1;
    string ownerId = 2;
    bytes encryptedPayload = 3;
    bytes capsule = 4;
}

message RegisterUriRequest {
    string collection = 1;
    string ownerId = 2;
    string uri = 3;
}

message StoreResult {
    string uri = 1;
}
